Fix spacing with grid size variables

--- a/packages/block-editor/src/components/inserter/style.scss
+++ b/packages/block-editor/src/components/inserter/style.scss
@@ -139,11 +139,11 @@ $block-inserter-search-height: 38px;
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		padding: $grid-size-large * 1.38 $grid-size-large;
+		padding: $grid-size-xlarge $grid-size-large;
 		margin-left: auto;
 		margin-right: auto;
 		font-style: normal;
-		font-size: 1.62em;
+		font-size: $grid-size-large + $grid-size-small;
 		color: $dark-gray-300;
 		border-radius: $radius-round-rectangle;
 		border: $border-width dashed $dark-gray-150;
